--- a/srcs/.env
+++ b/srcs/.env
@@ -1,8 +1,8 @@
-DOMAIN_NAME=subinlee.42.fr
+DOMAIN_NAME=junghych.42.fr
 
 # MYSQL
 MYSQL_ROOT_PASSWORD=qwer1234
-MYSQL_USER=subinlee
+MYSQL_USER=junghych
 MYSQL_PASSWORD=qwer1234
 DB_NAME=wordpress
 DB_HOST=mariadb
