--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,10 +2,10 @@ server {
 	listen 443 ssl; # ipv4
 	listen [::]:443 ssl; # ipv6
 
-	server_name subinlee.42.fr;
+	server_name junghych.42.fr;
 
-	ssl_certificate		/etc/nginx/ssl/subinlee.crt;
-	ssl_certificate_key	/etc/nginx/ssl/subinlee.key;
+	ssl_certificate		/etc/nginx/ssl/junghych.crt;
+	ssl_certificate_key	/etc/nginx/ssl/junghych.key;
 
 	ssl_protocols		TLSv1.2 TLSv1.3;
 
