--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 FROM alpine:3.19
-
+# mariadb는 yml파일에 image로 있어서 빼도 될듯? 근데 순서때문에 넣은건가?
 RUN apk update && apk upgrade && apk add --no-cache mariadb mariadb-client dumb-init \
     && rm -rf /var/cache/apk/*
 
