--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
 DOMAIN_NAME=junghych.42.fr
 
 # MYSQL
-MYSQL_ROOT_PASSWORD=qwer1234
 MYSQL_USER=junghych
 MYSQL_PASSWORD=qwer1234
+MYSQL_ROOT_PASSWORD=qwer1234
 DB_NAME=wordpress
 DB_HOST=mariadb
 
@@ -15,3 +15,4 @@ WP_ADMIN_EMAIL=master@42.fr
 WP_USER=guest
 WP_USER_PASSWORD=qwer1234
 WP_USER_EMAIL=guest@42.fr
+src/requirements
