--- a/debian/srcs/requirements/nginx/conf/nginx.conf
+++ b/debian/srcs/requirements/nginx/conf/nginx.conf
@@ -2,11 +2,11 @@ server {
     listen 443 ssl; # IPv4에서 SSL을 사용하여 443 포트 리스닝
     listen [::]:443 ssl; # IPv6에서 SSL을 사용하여 443 포트 리스닝
 
-    server_name junghych.42.fr; # 서버의 도메인 이름
+    server_name seed.42.fr; # 서버의 도메인 이름
 
     # SSL 인증서 및 키 파일 경로 설정
-    ssl_certificate /etc/nginx/ssl/junghych.crt; # SSL 인증서 경로
-    ssl_certificate_key /etc/nginx/ssl/junghych.key; # SSL 인증서 키 경로
+    ssl_certificate /etc/nginx/ssl/seed.crt; # SSL 인증서 경로
+    ssl_certificate_key /etc/nginx/ssl/seed.key; # SSL 인증서 키 경로
 
     # 사용할 SSL 프로토콜 설정
     ssl_protocols TLSv1.2 TLSv1.3; # TLS 1.2 및 1.3 프로토콜 사용
