--- a/debian/srcs/requirements/wordpress/Dockerfile
+++ b/debian/srcs/requirements/wordpress/Dockerfile
@@ -25,11 +25,11 @@
 # Debian Bullseye 이미지를 기반으로 하는 Dockerfile
 FROM debian:bullseye
 
-# 패키지 업데이트 및 PHP 7.4 및 관련 패키지 설치
+# 패키지 업데이트 및 PHP 7.4 및 관련 패키지 설치  php7.4-openssl제거
 RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     php7.4 php7.4-json php7.4-mysqli php7.4-curl php7.4-dom \
     php7.4-exif php7.4-imagick php7.4-igbinary php7.4-intl \
-    php7.4-mbstring php7.4-openssl php7.4-xml php7.4-zip \
+    php7.4-mbstring php7.4-xml php7.4-zip \
     php7.4-phar php7.4-fpm curl dumb-init \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
