--- a/debian/srcs/docker-compose.yml
+++ b/debian/srcs/docker-compose.yml
@@ -99,7 +99,7 @@ services:
     networks:
       - inception  # 'inception' 네트워크에 연결
     volumes:
-      - wp-volume:/var/www  # WordPress 파일을 저장할 볼륨
+      - wp-volume:/var/www/html  # WordPress 파일을 저장할 볼륨
     expose:
       - "9000"  # WordPress가 사용하는 포트를 외부에 노출
     depends_on:
