--- a/debian/srcs/docker-compose.yml
+++ b/debian/srcs/docker-compose.yml
@@ -88,6 +88,8 @@ services:
     ports:
       - "3306:3306"  # 호스트의 3306 포트를 컨테이너의 3306 포트에 매핑
     restart: always  # 컨테이너가 크래시 시 항상 재시작
+    dns:
+      - 8.8.8.8
 
   # WordPress 서비스
   wordpress:
