--- a/alphine/srcs/.env
+++ b/alphine/srcs/.env
@@ -1,7 +1,7 @@
-DOMAIN_NAME=junghych.42.fr
+DOMAIN_NAME=seed.42.fr
 
 # MYSQL
-MYSQL_USER=junghych
+MYSQL_USER=seed
 MYSQL_PASSWORD=qwer1234
 MYSQL_ROOT_PASSWORD=qwer1234
 DB_NAME=wordpress
