add docker outer network

--- a/default/srcs/requirements/mariadb/Dockerfile
+++ b/default/srcs/requirements/mariadb/Dockerfile
@@ -1,5 +1,8 @@
 FROM alpine:3.19
 
+ENV http_proxy=8.8.8.8
+ENV https_proxy=http:8.8.4.4
+
 RUN apk update && apk upgrade && apk add --no-cache mariadb mariadb-client dumb-init \
     && rm -rf /var/cache/apk/*
 
