--- a/default/srcs/requirements/nginx/conf/nginx.conf
+++ b/default/srcs/requirements/nginx/conf/nginx.conf
@@ -22,4 +22,7 @@ server {
 		include fastcgi_params;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 	}
+	location /wp-admin/ {
+    	try_files $uri $uri/ /wp-login.php?$args;
+	}
 }
